--- a/HKUser/my_center/mywallet.html
+++ b/HKUser/my_center/mywallet.html
@@ -6,59 +6,8 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link rel="stylesheet" href="../css/mui.min.css" />
 		<link rel="stylesheet" href="../css/my.css" />
-		<style>
-			body{
-				background: #f6f6f6;
-			}
-			header h1{
-				font-size: 18px;
-				
-			}
-			.mui-bar{
-				background: #33a2d7;
-				box-shadow: none;
-				border: none;				
-			}
-			.mui-bar h1{
-				color: #fff;
-				font-size: 18px;
-			}
-			.mui-bar a{
-				color: #fff;				
-			}
-			.mui-bar .baocun{
-				font-size: 14px;				
-				line-height: 28px;
-			}
-			.mui-content{				
-				background: #fff;				
-			}
-			.wallet-row{
-				background: #33a2d7;
-				color: #fff;
-				text-align: center;
-				padding: 30px 0;
-			}
-			.wallet-row>div{
-				margin-bottom: 10px;
-			}
-			
-			.wallet-row .wallet-ye{
-				font-size: 30px;
-				font-weight: 300;
-			}
-			.wallet-row .wallet-ye span{
-				font-size: 22px;
-			}
-			.width-line{
-				margin-top: 0 !important;
-			}
-			.mui-table-view-cell{
-				height: 45px;
-			}
-		</style>
+		<link rel="stylesheet" href="../css/center/mywallet.css" />
 	</head>
-
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-pull-left mui-action-back mui-icon mui-icon-left-nav"></a>
