--- a/HKUser/register.html
+++ b/HKUser/register.html
@@ -66,7 +66,7 @@
 					mobile:mobileValue
 				};
 				u.mypost("api/sendIdentifyCode",pdata,true,function(data){
-					if(data.code == 0){
+					if(data.code.result == 0){
 						_.toast("验证码已发送");
 						u.time(self);
 					}else{
